Fix alignment of SBT, PureScript, and readme icons

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -37,7 +37,7 @@
 .octicons { font-family: "Octicons Regular"; font-size: 16px; }
 
 .binary-icon:before       { .octicons; content: "\f094"; }
-.book-icon:before         { .octicons; content: "\f007"; }
+.book-icon:before         { .octicons; content: "\f007"; top: 1px; }
 .brew-icon:before         { .octicons; content: "\f069"; font-size: 15px; left: 1px; }
 .checklist-icon:before    { .octicons; content: "\f076"; font-size: 17px; left: 1px; top: 1px; }
 .code-icon:before         { .octicons; content: "\f05f"; }
@@ -361,7 +361,7 @@
 .pug-icon:before           { .file-icons; content: "\e9d0"; font-size: 16px; top: 3px; }
 .puppet-icon:before        { .file-icons; content: "\f0c3"; left: 1px; top: 2px; }
 .purebasic-icon:before     { .file-icons; content: "\01b5"; top: 2px; }
-.purescript-icon:before    { .file-icons; content: "\e9b2"; top: 2px; }
+.purescript-icon:before    { .file-icons; content: "\e9b2"; top: 3px; }
 .r-icon:before             { .file-icons; content: "\e905"; font-size: 17px; left: 0; top: 3px; }
 .racket-icon:before        { .file-icons; content: "\e9b1"; left: 1px; top: 2px; }
 .raml-icon:before          { .file-icons; content: "\e913"; top: 1px; font-size: 14px; }
@@ -375,7 +375,7 @@
 .sage-icon:before          { .file-icons; content: "\e9ab"; font-size: 16px; top: 3px; .thicken; }
 .saltstack-icon:before     { .file-icons; content: "\e915"; font-size: 14px; top: 2px; }
 .sas-icon:before           { .file-icons; content: "\e95a"; top: 2px; }
-.sbt-icon:before           { .file-icons; content: "\e9d2"; font-size: 14px; }
+.sbt-icon:before           { .file-icons; content: "\e9d2"; top: 2px; font-size: 14px; }
 .scd-icon:before           { .file-icons; content: "\e9a2"; top: 2px; }
 .scad-icon:before          { .file-icons; content: "\e911"; top: 2px; font-size: 14px; }
 .scheme-icon:before        { .file-icons; content: "\03bb"; top: 2px; }
